# py-to-ts-interfaces

./: .gitignore  README.md  pylintrc  setup.cfg
py_to_ts_interfaces/: __main__.py  enums.py  file_io.py  interfaces.py  strings.py  type_converting.py  utils.py
tests/: tests.py
