[metadata]
name = py-to-ts-interfaces
version =  1.4.0
author = Peter Bell
author_email = syndallic@outlook.com
description = A script to generate TypeScript interfaces from Python dataclasses, with enum support.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Syndallic/py-to-ts-interfaces
project_urls =
    Bug Tracker = https://github.com/Syndallic/py-to-ts-interfaces/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = py_to_ts_interfaces
python_requires = >=3.9

[options.entry_points]
console_scripts =
    py-to-ts-interfaces = py_to_ts_interfaces.__main__:main